# inventory-app

./: .gitignore  .taurignore  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
src/: api.ts
src-tauri/: .taurignore  Cargo.toml  inventory.db  tauri.conf.json  variables.env
src-tauri/src/: main.rs
src-tauri/src/database/: errori.rs  mod.rs
src-tauri/src/models/: product.rs  purchase.rs
src/app/: _app.tsx  layout.tsx
src/app/invoices/: page.tsx
src/app/products/: page.tsx
src/components/: AppShell.tsx  ConfirmModal.tsx  CreateProduct.tsx  CreateProductModal.tsx  NavBar.tsx  ProductsList.tsx  PurchaseList.tsx
src/components/pdf/: Document.tsx  DownloadPDF.tsx  EditableCalendarInput.tsx  EditableFileImage.tsx  EditableInput.tsx  EditableSelect.tsx  EditableTextarea.tsx  InvoicePage.tsx  Page.tsx  Text.tsx  View.tsx
src/data/: initialData.ts  types.ts
src/hooks/: useOnClickOutside.tsx
src/models/: product.ts  purchase.ts
src/scss/: _app.scss  _color.scss  _layout.scss  _typography.scss  _variables.scss
src/styles/: compose.ts  globals.css  styles.ts
