[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.3.0", features = ["api-all"] }
async-std = { version = "1.10", features = ["attributes"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
thiserror = "1.0"
anyhow = "1.0"
chrono = "0.4.26"
portpicker = "0.1"



[dependencies.rusqlite]
version = "0.29.0"
features = ["bundled"]

[dependencies.tauri-plugin-localhost]
git = "https://github.com/tauri-apps/tauri-plugin-localhost"
tag = "tauri-plugin-localhost-v0.1.0"
#branch = "main"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
